# pytest-subunit

./: pyproject.toml  setup.cfg  setup.py
