[metadata]
name = pytest-subunit
description = pytest-subunit is a plugin for py.test which outputs testsresult in subunit format.
long_description =
version = 0.0.10
license = Apache 2
author = Łukasz Oleś
author_email = loles@mirantis.com
maintainer = Jelmer Vernooĳ
maintainer_email = jelmer@jelmer.uk
platforms = any
url = https://github.com/jelmer/pytest-subunit
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
description-file = README.rst

[options]
py_modules = pytest_subunit
zip_safe = False
include_package_data = True
install_requires =
    pytest>=2.3
    python-subunit>=1.2

[options.entry_points]
pytest11 =
    subunit = pytest_subunit
